add TagLib for work with mediafiles tag

--- a/AudioPlayerProject.csproj
+++ b/AudioPlayerProject.csproj
@@ -13,4 +13,8 @@
     <Folder Include="Playlists\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="TagLibSharp" Version="2.3.0" />
+  </ItemGroup>
+
 </Project>
